tests/ui/wrong_validator_type.stderr
error[E0308]: mismatched types
  --> tests/ui/wrong_validator_type.rs:19:17
   |
16 | #[derive(Validated)]
   |          --------- expected due to this
...
19 |     #[validator(is_positive)] // Use the String validator
   |                 ^^^^^^^^^^^ expected struct `E`, found struct `String`
   |
   = note: expected fn pointer `fn(_) -> Result<_, E>`
                 found fn item `fn(_) -> Result<_, String> {is_positive}`

error[E0308]: mismatched types
  --> tests/ui/wrong_validator_type.rs:16:10
   |
16 | #[derive(Validated)]
   |          ^^^^^^^^^
   |          |
   |          expected struct `E`, found struct `String`
   |          arguments to this function are incorrect
   |
note: associated function defined here
  --> $RUST/alloc/src/vec/mod.rs
   |
   |     pub fn push(&mut self, value: T) {
   |            ^^^^
   = note: this error originates in the derive macro `Validated` (in Nightly builds, run with -Z macro-backtrace for more info)
